crates/swc_ecma_react_compiler/tests/fixtures/upstream/rules-of-hooks/todo.error.invalid-rules-of-hooks-8566f9a360e2/error.txt
Found 1 error:

Error: Hooks must always be called in a consistent order, and may not be called conditionally. See the Rules of Hooks (https://react.dev/warnings/invalid-hook-call-warning)

todo.error.invalid-rules-of-hooks-8566f9a360e2.ts:8:4
   6 | const MemoizedButton = memo(function (props) {
   7 |   if (props.fancy) {
>  8 |     useCustomHook();
     |     ^^^^^^^^^^^^^ Hooks must always be called in a consistent order, and may not be called conditionally. See the Rules of Hooks (https://react.dev/warnings/invalid-hook-call-warning)
   9 |   }
  10 |   return <button>{props.children}</button>;
  11 | });
